# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: pyci.yml  pycy.yml
gendiff/: __init__.py  cli.py  gendiff.py  generate.py  generate_diff.py  parser.py
gendiff/formaters/: choice_formater.py  generate_json.py  generate_plain.py  generate_stylish.py
gendiff/formatters/: generate_json.py  generate_plain.py  generate_stylish.py
gendiff/scripts/: cli.py  gendiff.py  generate.py
gendiff/tests/: __init__.py  test_formaters.py  test_gen_diff.py  test_json_plain.py  test_parser.py  test_stylish_and_gendiff.py
gendiff/tests/fixtures/: filet2.json  json_result.txt  json_right_result
tests/: test_formaters.py  test_parser.py
