[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["imbalans <imba.yeah@yandex.ru>"]
repository = "https://github.com/imbalans/python-project-50"
readme = "README.md"
packages = [
    {include = "gendiff"}
]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.scripts]
gendiff = "gendiff.scripts.generate:main"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
