[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Show difference between two data files"
authors = ["imbalans <imba.yeah@yandex.ru>"]
repository = "https://github.com/imbalans/python-project-50"
readme = "README.md"
packages = [
    {include = "gendiff"}
]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"


[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
